--- a/formulario.css
+++ b/formulario.css
@@ -1,3 +1,12 @@
+/*
+@author Ludmila Silveira (ludmila.https@gmail.com)
+@brief Application form
+
+@date 2022-08-22
+
+@copyright Copyright (c) 2022
+*/
+
 * {
     margin: 0;
     padding: 0;
@@ -6,13 +15,21 @@
 #title {
     font-family: sans-serif;
     color: #380861;
-    margin-left: 7%;
+    position: absolute;
+    top: -7%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 
 #subtitle {
     font-family: sans-serif;
     color: #380861;
-    margin-left: 10%
+    position: absolute;
+    top: -2%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 
 #check{
@@ -27,10 +44,12 @@ body {
     background-color: #F0F8FF;
     font-family: sans-serif;
     font-size: 1em;
-    color: rgb(48, 10, 115);
-    margin-left: 36%;
-    margin-top: 2%;
-    justify-content: center;
+    color: #59429d;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 
 input, select, textarea, button {
@@ -87,7 +106,7 @@ fieldset.group .field {
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     position: absolute;
-    top: 90%;
+    top: 150%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
